添加HTTP服务接口
