# controller/service.go
@@ -1,14 +1,15 @@
 package controller
 
 import (
+	"errors"
 	"fmt"
 	"gateway/dao"
 	"gateway/dto"
 	"gateway/middleware"
 	"gateway/public"
-
 	"github.com/e421083458/golang_common/lib"
 	"github.com/gin-gonic/gin"
+	"strings"
 )
 
 type ServiceController struct{}
@@ -16,6 +17,9 @@ type ServiceController struct{}
 func ServiceRegister(group *gin.RouterGroup) {
 	service := &ServiceController{}
 	group.GET("/service_list", service.ServiceList)
+	group.GET("/service_delete", service.ServiceDelete)
+	group.POST("/service_add_http",service.ServiceAddHTTP)
+	group.POST("/service_update_http", service.ServiceUpdateHTTP)
 }
 
 // ServiceList godoc
@@ -46,6 +50,7 @@ func (service *ServiceController) ServiceList(c *gin.Context) {
 	serviceInfo := &dao.ServiceInfo{}
 	list, total, err := serviceInfo.PageList(c, tx, params)
 	if err != nil {
+		fmt.Println("出错了")
 		middleware.ResponseError(c, 2002, err)
 		return
 	}
@@ -68,12 +73,12 @@ func (service *ServiceController) ServiceList(c *gin.Context) {
 		// HTTPS
 		if serviceDetail.Info.LoadType == public.LoadTypeHTTP && serviceDetail.HTTPRule.RuleType == public.HTTPRuleTypePrefixURL &&
 			serviceDetail.HTTPRule.NeedHttps == 1 {
-			serviceAddr = clusterIP + clusterSSLPort + serviceDetail.HTTPRule.Rule
+			serviceAddr = fmt.Sprintf("%s:%s%s", clusterIP, clusterSSLPort, serviceDetail.HTTPRule.Rule)
 		}
 		// HTTP
 		if serviceDetail.Info.LoadType == public.LoadTypeHTTP &&
 			serviceDetail.HTTPRule.RuleType == public.HTTPRuleTypePrefixURL && serviceDetail.HTTPRule.NeedHttps == 0 {
-			serviceAddr = clusterIP + clusterPort + serviceDetail.HTTPRule.Rule
+			serviceAddr = fmt.Sprintf("%s:%s%s", clusterIP, clusterPort, serviceDetail.HTTPRule.Rule)
 		}
 		// Domain
 		if serviceDetail.Info.LoadType == public.LoadTypeHTTP && serviceDetail.HTTPRule.RuleType == public.HTTPRuleTypeDomain {
@@ -104,4 +109,242 @@ func (service *ServiceController) ServiceList(c *gin.Context) {
 		List:  outList,
 	}
 	middleware.ResponseSuccess(c, out)
+}
+
+
+// ServiceDelete godoc
+// @Summary 服务删除
+// @Description 服务删除
+// @Tags 服务管理
+// @ID /service/service_delete
+// @Accept json
+// @Product json
+// @Param id query string true "服务ID"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /service/service_delete [get]
+func (service *ServiceController) ServiceDelete(c *gin.Context) {
+	params := &dto.ServiceDeleteInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 1001, err)
+		return
+	}
+
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	// 读取基本信息
+	serviceInfo := &dao.ServiceInfo{ID: params.ID}
+	serviceInfo, err = serviceInfo.Find(c, tx, serviceInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	serviceInfo.IsDelete = 1
+	if err := serviceInfo.Save(c,tx); err != nil{
+		middleware.ResponseError(c,2003,err)
+		return
+	}
+	middleware.ResponseSuccess(c, "")
+}
+
+
+// ServiceAddHTTP godoc
+// @Summary 添加HTTP服务
+// @Description 添加HTTP服务
+// @Tags 服务管理
+// @ID /service/service_add_http
+// @Accept json
+// @Product json
+// @Param body body dto.ServiceAddHTTPInput true "body"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /service/service_add_http [post]
+func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
+	params := &dto.ServiceAddHTTPInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	tx,err := lib.GetGormPool("default")
+	if err != nil{
+		middleware.ResponseError(c,2001,err)
+		return
+	}
+	// 开启事务
+	tx.Begin()
+	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
+
+	if _,err = serviceInfo.Find(c,tx,serviceInfo);err == nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2002, errors.New("服务已存在"))
+		return
+	}
+	// 校验路径
+	httpUrl := &dao.HttpRule{RuleType: params.RuleType, Rule: params.Rule}
+	if _ , err = httpUrl.Find(c,tx,httpUrl); err == nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2003,errors.New("域名接入前缀或者域名已存在"))
+		return
+	}
+	// 校验IP和权重
+	 if len(strings.Split(params.IpList, "\n")) != len(strings.Split(params.WeightList, "\n")){
+	 	tx.Rollback()
+	 	middleware.ResponseError(c, 2004, errors.New("IP列表和权重列表不一致"))
+	 	return
+	 }
+	 serviceModel := &dao.ServiceInfo{
+	 	ServiceName: params.ServiceName,
+	 	ServiceDesc: params.ServiceDesc,
+	 }
+
+	if err = serviceModel.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2005, err)
+		return
+	}
+	httpRule := &dao.HttpRule{
+		ServiceID: serviceModel.ID,
+		RuleType: params.RuleType,
+		Rule: params.Rule,
+		NeedHttps: params.NeedHttps,
+		NeedWebsocket: params.NeedWebsocket,
+		UrlRewrite: params.UrlRewrite,
+		HeaderTransfor: params.HeaderTransfor,
+	}
+	if err = httpRule.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2006,err)
+		return
+	}
+
+	accessControl := &dao.AccessControl{
+		ServiceID: serviceModel.ID,
+		OpenAuth: params.OpenAuth,
+		BlockList: params.BlackList ,
+		WhiteList: params.WhiteList ,
+		ClientIPFlowLimit: params.ClientipFlowLimit,
+		ServiceFlowLimit: params.ServiceFlowLimit,
+
+	}
+	if err = accessControl.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2007,err)
+		return
+	}
+
+	loadBalance := &dao.LoadBalance{
+		ServiceID: serviceModel.ID,
+		RoundType: params.RoundType,
+		IpList: params.IpList,
+		WeightList: params.WeightList,
+		UpstreamConnectTimeout: params.UpstreamConnectTimeout,
+		UpstreamHeaderTimeout: params.UpstreamHeaderTimeout,
+		UpstreamIdleTimeout: params.UpstreamIdleTimeout,
+		UpstreamMaxIdle: params.UpstreamMaxIdle,
+	}
+	if err = loadBalance.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2008,err)
+		return
+	}
+	tx.Commit()
+	middleware.ResponseSuccess(c, "")
+}
+
+
+
+
+
+// ServiceUpdateHTTP godoc
+// @Summary 修改HTTP服务
+// @Description 修改HTTP服务
+// @Tags 服务管理
+// @ID /service/service_update_http
+// @Accept json
+// @Product json
+// @Param body body dto.ServiceUpdateHTTPInput true "body"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /service/service_update_http [post]
+func (service *ServiceController) ServiceUpdateHTTP(c *gin.Context) {
+	params := &dto.ServiceUpdateHTTPInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+	tx,err := lib.GetGormPool("default")
+	if err != nil{
+		middleware.ResponseError(c,2001,err)
+		return
+	}
+	// 校验路径
+	httpUrl := &dao.HttpRule{RuleType: params.RuleType, Rule: params.Rule}
+	if _ , err = httpUrl.Find(c,tx,httpUrl); err == nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2003,errors.New("域名接入前缀或者域名已存在"))
+		return
+	}
+	// 校验IP和权重
+	if len(strings.Split(params.IpList, "\n")) != len(strings.Split(params.WeightList, "\n")){
+		tx.Rollback()
+		middleware.ResponseError(c, 2004, errors.New("IP列表和权重列表不一致"))
+		return
+	}
+
+
+	// 开启事务
+	tx.Begin()
+	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
+
+	serviceDetail,err := serviceInfo.ServiceDetail(c,tx,serviceInfo)
+	if err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2002, errors.New("服务不存在"))
+		return
+	}
+	// HTTP服务修改
+	httpRule := serviceDetail.HTTPRule
+	httpRule.NeedHttps = params.NeedHttps
+	httpRule.NeedWebsocket = params.NeedWebsocket
+	httpRule.UrlRewrite = params.UrlRewrite
+	httpRule.HeaderTransfor = params.HeaderTransfor
+
+	if err = httpRule.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2006,err)
+		return
+	}
+
+	accessControl := &dao.AccessControl{
+		ServiceID: serviceModel.ID,
+		OpenAuth: params.OpenAuth,
+		BlockList: params.BlackList ,
+		WhiteList: params.WhiteList ,
+		ClientIPFlowLimit: params.ClientipFlowLimit,
+		ServiceFlowLimit: params.ServiceFlowLimit,
+
+	}
+	if err = accessControl.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2007,err)
+		return
+	}
+
+	loadBalance := &dao.LoadBalance{
+		ServiceID: serviceModel.ID,
+		RoundType: params.RoundType,
+		IpList: params.IpList,
+		WeightList: params.WeightList,
+		UpstreamConnectTimeout: params.UpstreamConnectTimeout,
+		UpstreamHeaderTimeout: params.UpstreamHeaderTimeout,
+		UpstreamIdleTimeout: params.UpstreamIdleTimeout,
+		UpstreamMaxIdle: params.UpstreamMaxIdle,
+	}
+	if err = loadBalance.Save(c,tx); err != nil{
+		tx.Rollback()
+		middleware.ResponseError(c,2008,err)
+		return
+	}
+	tx.Commit()
+	middleware.ResponseSuccess(c, "")
 }
